--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
         <div class="footer__content">
           <h3 class="footer__title">Address</h3>
           <ul>
-            <li>Lima - Peru</li>
-            <li>Jr Union #999</li>
-            <li>999 - 888 - 777</li>
+            <li>Gyeonggi-do, Republic of Korea</li>
+            <li>Yongin-si</li>
+            <li>010-1234-5678</li>
             <li>junis.yun94@gmail.com</li>
           </ul>
         </div>
